Ignore NeedsAdjacentStyleRecalc() for sanity DCHECK.

NeedsLayoutTreeUpdateForNode() is true if an ancestor returns true for
NeedsAdjacentStyleRecalc(). For getComputedStyle we may start out with a
tree where we don't need a full style/layout-tree update, but matching
selectors as part of EnsureComputedStyle() up the ancestor chain may
cause those flags to be set if we match adjacent selectors which were not
previously matched. We need to ignore those flags for the sanity check
in EnsureComputedStyle.

This may be the situation in which the DCHECK triggers for 900138 as
well.

Bug: 906830, 900138
Change-Id: I51927fdb9f4bc44e3612628cf9b9710d26e2d8ea
Reviewed-on: https://chromium-review.googlesource.com/c/1344130
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609956}
Former-commit-id: b71814c8bf500d2610c6003f0310950e85b6467d